Add the functionalities
-added basic operations
-integrate with the keyboard
-since the code is long, and basic it looks nasty.
-took considerable efforts as there are multiple
edge cases, but I enjoyed the assignment.

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    overflow: hidden;
 }
 .buttons{
     display: flex;
@@ -79,7 +80,7 @@
 }
 
 #power{
-    color: green;
+    color: red;
 }
 #allClear{
     color: red;
